# Voro

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  release.toml
.claude-plugin/: marketplace.json
.claude/skills/focus-cli/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/voro-cli/: SKILL.md
.github/workflows/: rust.yml
crates/focus/: Cargo.toml
crates/focus-core/: Cargo.toml
crates/focus-core/migrations/: 0001_init.sql
crates/focus-core/src/: error.rs  lib.rs  model.rs  scheduler.rs  store.rs
crates/focus/src/: app.rs  cli.rs  editor.rs  main.rs  ui.rs
crates/voro/: Cargo.toml  release.toml
crates/voro-core/: Cargo.toml  release.toml
crates/voro-core/migrations/: 0002_rename_backlog_to_parked.sql  0003_track_pr.sql  0004_add_session_ref.sql  0005_add_branch.sql  0006_one_open_session_per_task.sql  0007_add_human.sql  0008_add_stalled_state.sql  0009_add_review_action.sql  0010_add_waiting_state.sql  0011_add_archived.sql
crates/voro-core/src/: agent.rs  config_edit.rs  error.rs  import.rs  lib.rs  model.rs  pr.rs  rebase.rs  scheduler.rs  store.rs  transition.rs
crates/voro/src/: app.rs  cli.rs  dispatch.rs  editor.rs  import.rs  main.rs  pr.rs  rebase.rs  reconcile.rs  ui.rs  worktree.rs
crates/voro/tests/: propose_ignores_ambient_task_id.rs
docs/: DESIGN.md  agent-integration.md  ui-redesign.md
plugins/voro/.claude-plugin/: plugin.json
plugins/voro/skills/voro-cli/: SKILL.md
