[workspace]
resolver = "2"
members = ["crates/focus-core", "crates/focus"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ClachDev/focus"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
