[workspace]
resolver = "2"
members = ["crates/voro-core", "crates/voro"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ClachDev/Voro"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
ratatui = "0.30"
