[package]
name = "voro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A local, single-operator command centre that prioritises tasks across projects and dispatches them to coding agents."
readme = "../../README.md"
keywords = ["cli", "tui", "tasks", "productivity", "agents"]
categories = ["command-line-utilities"]

[dependencies]
voro-core = { path = "../voro-core", version = "0.1.0" }
ratatui.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
